add BSD sed compatibility (OS X) and switch to tagged git deploy  (#1)
* fixed makefile to work with BSD sed

* Updated dockerfile to support installing from a git tag vs zip file

* removed binary from repo

* update Readme to reflect tag chooser

* update readme to reflect testing of v1 and zero

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,19 +1,10 @@
 FROM resin/%%RESIN_MACHINE_NAME%%-python
 
-RUN apt-get update \
-	&& apt-get install -y \
-		unzip
-
-WORKDIR /tmp
-COPY octoprint.zip octoprint.zip
-RUN unzip octoprint.zip \
-	&& rm -rf /usr/local/src \
-	&& mv OctoPrint-master /usr/local/src
-RUN ls -lah /usr/local/src
+ARG tag=master
 
 WORKDIR /usr/local/src
-RUN virtualenv venv \
+RUN git clone --branch $tag https://github.com/foosel/OctoPrint.git /usr/local/src \
+  && virtualenv venv \
 	&& ./venv/bin/python setup.py install
 
-ENTRYPOINT /usr/local/src/venv/bin/octoprint --iknowwhatimdoing --host 0.0.0.0 --port 80 --basedir /data/octoprint
-
+ENTRYPOINT /usr/local/src/venv/bin/octoprint serve --iknowwhatimdoing --host 0.0.0.0 --port 80 --basedir /data/octoprint
