--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,6 +1,6 @@
 FROM resin/%%RESIN_MACHINE_NAME%%-python
 
-ARG tag=master
+ARG tag=1.3.6
 
 WORKDIR /usr/local/src
 RUN git clone --branch $tag https://github.com/foosel/OctoPrint.git /usr/local/src \
