--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -5,6 +5,7 @@ ARG tag=1.3.6
 WORKDIR /usr/local/src
 RUN git clone --branch $tag https://github.com/foosel/OctoPrint.git /usr/local/src \
   && virtualenv venv \
-	&& ./venv/bin/python setup.py install
+	&& ./venv/bin/python setup.py install \
+  && ./venv/bin/pip install "https://github.com/kennethjiang/OctoPrint-Slicer/archive/master.zip"
 
 ENTRYPOINT /usr/local/src/venv/bin/octoprint serve --iknowwhatimdoing --host 0.0.0.0 --port 80 --basedir /data/octoprint
