--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -3,6 +3,8 @@ FROM resin/%%RESIN_MACHINE_NAME%%-python
 ARG tag=1.3.6
 
 WORKDIR /usr/local/src
+RUN git clone https://github.com/pimoroni/hyperpixel.git /usr/local/src/hyperpixel \
+  && ./hyperpixel/setup.sh
 RUN git clone --branch $tag https://github.com/foosel/OctoPrint.git /usr/local/src \
   && virtualenv venv \
 	&& ./venv/bin/python setup.py install \
